opam-version: "2.0"
name: "session-cohttp"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-session"
bug-reports: "https://github.com/inhabitedtype/ocaml-session/issues"
depends: [
  "ocaml"
  "dune" {build & >= "1.0"}
  "session" {>= "0.4.0"}
  "cohttp" {>= "0.99.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/inhabitedtype/ocaml-session.git"
synopsis: "A session manager for your everyday needs - Cohttp-specific support"
