opam-version: "2.0"
name: "session-postgresql-lwt"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-session"
bug-reports: "https://github.com/inhabitedtype/ocaml-session/issues"
doc: "https://inhabitedtype.github.io/ocaml-session/"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "1.0"}
  "session-postgresql" {= version}
  "lwt" {>= "3.2.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/inhabitedtype/ocaml-session.git"
synopsis: "A session manager for your everyday needs - Postgresql-specific support"
