opam-version: "2.0"
name: "session-sqlite"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-session"
bug-reports: "https://github.com/inhabitedtype/ocaml-session/issues"
doc: "https://inhabitedtype.github.io/ocaml-session/"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "1.0"}
  "session" {= version}
  "base64" {>= "3.1.0"}
  "sqlite3"
  "mirage-crypto-rng"
  "ounit" {with-test & >= "1.0.2"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/inhabitedtype/ocaml-session.git"
synopsis: "A session manager for your everyday needs - SQLite3-specific support"
