opam-version: "1.2"
name: "session"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-session"
dev-repo: "https://github.com/inhabitedtype/ocaml-session.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-session/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "dune" {build & >= "1.0"}
  "nocrypto"
  "result"
  "ounit" {test & >= "1.0.2"}
]

available: [ocaml-version >= "4.03.0"]
